--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 <body>
     <header>
+        <img alt="Cider Falls Logo">
         <h1>Welcome to Cider Falls</h1>
     </header>
     <main>
-        <p>Your content goes here.</p>
+        <section class="column_left">
+            <article class="services">Services Here</article>
+            <section class="destinations">Destinations Here</section>
+        </section>
+        <article class="column_right">Guests Here</article>
     </main>
     <footer>
         <p>&copy; 2025 Cider Falls</p>
