Reconfigured element layout

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>Welcome to Cider Falls</h1>
     </header>
     <main>
-        <section class="column_left">
-            <article class="services">Services Here</article>
+        <article class="column_left">
+            <section class="services">Services Here</article>
             <section class="destinations">Destinations Here</section>
-        </section>
-        <article class="column_right">Guests Here</article>
+        </article>
+        <aside class="column_right">Guests Here</aside>
     </main>
     <footer>
         <p>&copy; 2025 Cider Falls</p>
