Fix article closing tag to section closing tag

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <article class="column_left">
             <section class="services">Services Here
-        </article>
-        <section class="destinations">Destinations Here</section>
+            </section>
+            <section class="destinations">Destinations Here</section>
         </article>
         <aside class="column_right">Guests Here</aside>
     </main>
