added logo to index.html and some styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img alt="Cider Falls Logo">
+        <img src="assets/ciderfallslogo.svg" alt="Cider Falls Logo">
         <h1>Welcome to Cider Falls</h1>
     </header>
     <main>
